# COD_NAV

./: .gitmodules  LICENSE  README.md  codmap.pgm  codmap.yaml  rmul_2025.pgm  sim_test.pgm  sim_test.yaml
.github/workflows/: ci.yml  main.yml
clear_costmap_caller/: CMakeLists.txt
clear_costmap_caller/src/: clear_costmap_caller.cpp
fake_vel_transform/: CMakeLists.txt  README.md  package.xml
fake_vel_transform/launch/: fake_vel_transform_launch.py
fake_vel_transform/src/: fake_vel_transform.cpp
ign_sim_pointcloud_tool/: CMakeLists.txt  package.xml
ign_sim_pointcloud_tool/src/: point_cloud_converter.cpp
lidar_localization_ros2/: CMakeLists.txt
lidar_localization_ros2/launch/: lidar_localization.launch.py  sim_lidar_localization.launch.py
lidar_localization_ros2/param/: localization.yaml  sim_localization.yaml
lidar_localization_ros2/src/: lidar_localization_component.cpp
nav_bringup/: CMakeLists.txt  package.xml
nav_bringup/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
nav_bringup/launch/: bringup.launch.py  carto.launch.py  lio_only.launch.py  localization_launch.py  nav_bringup.launch.py  navigation_launch.py  sim_bringup.launch.py  sim_nav_bringup.launch.py  slam.launch.py  slop.launch.py
nav_bringup/map/: blue.pgm  blue.yaml  cartographer_map.pbstream  map.pgm  map.yaml  rmuc_2024.yaml  rmul_2024.yaml  test.pgm  test.yaml  test1.pgm  test1.yaml  test2.pgm  (+1 more)
obstacle_escape/: CMakeLists.txt  package.xml
obstacle_escape/src/: obstacle_escape_node.cpp
script/: bringup.sh  pcd2pgm.sh
test_data/: rmul_2025.yaml
(+79 files in other folders)
